# fastmcp-beginner-guide

./: .env.example  .gitignore  README.md  pyproject.toml
src/fastmcp_learning/: __init__.py  server.py
src/fastmcp_learning/clients/: __init__.py  common.py  http_client.py  openai_agent_flow.py  stdio_client.py
tests/: __init__.py  test_openai_agent_flow.py  test_server.py
